--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 .green-banner{
   background: #009688;
-  height: 50px;
+  height: 150px;
   width: 100vw;
   z-index: -1000;
 }
@@ -15,6 +15,15 @@
 .top-pannel-left{
   border-right: 1px solid rgb(223, 223, 223);
 }
+
+.rce-mlist div[class^='rce-container-mbox'] {
+  margin: 5px 0px 5px 0px ;
+}
+
+.messages {
+  background: url(http://i.imgur.com/TnNwdvV.png);
+}
+
 .input-parent {
   background-color: #f0f0f0;
 }
@@ -24,4 +33,8 @@
 .message-input textarea {
   border: 2px solid rgb(255, 255, 255);
   border-radius: 30px;
+}
+
+.login-container{
+  border: 1px solid rgb(221, 220, 220);
 }
