--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,32 @@
 .app-container {
-  border: 1px solid rgb(221, 220, 220);
   padding: 10px, 0, 10px, 0;
+  position: relative;
+  height: 100vh;
+}
+.thin-border {
+  border: 1px solid rgb(221, 220, 220);
+}
+.green-background {
+  background: #00bfa5;
+}
+.stone-background {
+  background: #ededed;
+}
+.search-background {
+  background: #f6f6f6;
+}
+.white-background {
+  background: #ffffff;
 }
 .green-banner {
-  background: #009688;
-  height: 150px;
-  width: 100vw;
+  background: #00bfa5;
+  height: 144px;
+ width: 100%;
   z-index: -1000;
+  position:absolute;
+  top: 0px
 }
-.top-pannel {
-  background-color: #f0f0f0;
-}
+
 .top-pannel-left {
   border-right: 1px solid rgb(223, 223, 223);
 }
@@ -21,10 +37,31 @@
 
 .messages {
   background: url(http://i.imgur.com/TnNwdvV.png);
+  max-height: 100%;
+  overflow-y: scroll;
+  flex-grow: 1; 
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+}
+
+
+.profile-pic:hover  > .overlay {
+    opacity: 1;
+
 }
 
 .input-parent {
   background-color: #f0f0f0;
+}
+.message-list{
+  flex-grow: 1;
+  height: 100%;
 }
 .message-input {
   border-radius: 30px;
@@ -37,7 +74,10 @@
 .login-container {
   border: 1px solid rgb(221, 220, 220);
 }
-
+.border-top-bottom {
+  border-top: 1px solid rgb(221, 220, 220);
+  border-bottom: 1px solid rgb(221, 220, 220);
+}
 #search-bar {
   border-radius: 500px;
   height: 40px;
@@ -50,7 +90,7 @@
 #search-bar-parent {
   position: relative;
   margin-top: 10px;
- /* background-color: #F6F6F6; */
+  /* background-color: #F6F6F6; */
 }
 .search-bar-glass {
   position: absolute;
