log out implemented

--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,15 @@ body {
   display: flex;
   justify-content: center;
 }
+
+.dropdown-toggle::after {
+  display: none;
+}
+
+button.dropdown-toggle.btn-light {
+  padding: 0px !important;
+  margin: 0px !important;
+  outline: none;
+}
+
+
